[B]Version 2.1.2[/B]
- Completely new and redesigned media flags

[B]Version 2.1.1[/B]
- Completely new and redesigned default and skin icons

[B]Version 2.1.0[/B]
- Update skin to 1080 resolution

[B]Version 2.0.1[/B]
- Add 2 sets of default backgrounds, skin setting and select dialog
- Home screen top guide button is now centered by default

[B]Version 2.0.0[/B]
- Add show/hide password to keyboard dialog
- Use infill=false on transparent textures
- Add Player.Cuts to video OSD
- Add Favourites browser support
- Add support for Dolby Vision, HDR10 and HLG codec flagging
- Update screen calibration window
- Update home submenu icons
- Add support for color button
- Add color picker dialog
- Add game controllers port dialog
- Add support for RetroPlayer savestate manager
- Add scene markers to video OSD
- PVR channel manager dialog will fade inactive channels

[B]Version 1.3.6[/B]
- Fix album and song information window play button
- Fix numeric dialog
- Switch to bigger keyboard dialog

[B]Version 1.3.5[/B]
- Recode video calibration window
- Bugfixes

[B]Version 1.3.4[/B]
- Add "Movie set information" label to video information dialog
- Bugfix video codec flagging
- Add spin controls to Favourites and File Browser dialogs

[B]Version 1.3.3[/B]
- Startup animation also works when using splash screen

[B]Version 1.3.2[/B]
- Add startup animation

[B]Version 1.3.1[/B]
- Add skin setting to blur fanart backgrounds

[B]Version 1.3.0[/B]
- Add gaming support

[B]Version 1.2.7[/B]
- Add skin setting to use splash screen

[B]Version 1.2.6[/B]
- Fix List view label2
- Fix select dialog focus issue

[B]Version 1.2.5[/B]
- Fix languages

[B]Version 1.2.4[/B]
- Widget updates and fixes

[B]Version 1.2.3[/B]
- Add RDS support

[B]Version 1.2.2[/B]
- Fix widget labels
- Add Player.Chapters and Player.CutList to seekbar OSD
- Add cache to progress bar OSD
- Add slider control to video and music OSD
- Remove slider control from DialogSeekBar.xml

[B]Version 1.2.1[/B]