@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="skin.tetradui" version="2.1.2" name="TetradUI" provider-name="Jezz_X, TeamUI">
+<addon id="skin.tetradui" version="2.1.3" name="TetradUI" provider-name="Jezz_X, TeamUI">
   <requires>
     <import addon="xbmc.gui" version="5.15.00" />
 	<import addon="script.embuary.helper" version="2.0.2"/>
@@ -28,7 +28,7 @@
       <screenshot>resources/screenshot-09.png</screenshot>
       <screenshot>resources/screenshot-10.png</screenshot>
     </assets>
-    <news>[B]2.1.2[/B][CR]- - Completely new and redesigned media flags</news>
+    <news>[B]2.1.3[/B][CR]- Remove DontBlendBackground skin setting</news>
     <summary lang="bg_BG">TetradUI е тема за Kodi media ccenter</summary>
     <summary lang="da_DK">TetradUI er et skin til Kodi mediecenter</summary>
     <summary lang="en_GB">TetradUI is a skin add-on for Kodi media center</summary>
