@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <window>
-	<onload condition="System.AddonIsEnabled(script.artistslideshow) + !Skin.HasSetting(Back_Fanart) + !Skin.HasSetting(DontBlendBackground) + Skin.HasSetting(EnableArtistSlideshow)">RunScript(script.artistslideshow)</onload>
+	<onload condition="System.AddonIsEnabled(script.artistslideshow) + !Skin.HasSetting(Back_Fanart) + Skin.HasSetting(EnableArtistSlideshow)">RunScript(script.artistslideshow)</onload>
 	<controls>
 		<control type="visualisation">
 			<description>visualisation</description>
@@ -18,7 +18,7 @@
 			<randomize>true</randomize>
 			<fadetime>IconCrossfadeTime</fadetime>
 			<imagepath>$VAR[MusicPlayingArtistFanartSlideshowVar]</imagepath>
-			<visible>!Skin.HasSetting(Back_Fanart) + !Skin.HasSetting(DontBlendBackground)</visible>
+			<visible>!Skin.HasSetting(Back_Fanart)</visible>
 			<animation effect="fade" end="50" condition="true">Conditional</animation>
 			<include condition="Skin.HasSetting(AnimateFanart) | Skin.HasSetting(AnimateMusicPlayingFanart)">BackgroundAnim</include>
 		</control>
