@@ -5,7 +5,7 @@
 	<animation effect="fade" start="100" end="100" time="30" condition="Control.HasFocus(1)">WindowClose</animation>
 	<animation effect="fade" start="100" end="100" time="30" condition="Control.HasFocus(2)">WindowClose</animation>
 	<controls>
-		<include condition="!Skin.HasSetting(DontBlendBackground)">CommonVideoVizBackground</include>
+		<include>CommonVideoVizBackground</include>
 		<control type="group">
 			<animation effect="slide" start="0,0" end="-1920,0" time="HomeBladeAnimationSpeed" condition="Control.HasFocus(2)">Conditional</animation>
 			<animation effect="slide" start="0,0" end="1920,0" time="HomeBladeAnimationSpeed" condition="Control.HasFocus(1)">Conditional</animation>
@@ -21,7 +21,6 @@
 			<animation effect="slide" start="-1920,0" end="0,0" time="HomeBladeAnimationSpeed" condition="Control.HasFocus(1)">Conditional</animation>
 			<include>CommonWeatherBackground</include>
 		</control>
-		<include condition="Skin.HasSetting(DontBlendBackground)">CommonVideoVizBackground</include>
 		<!-- Blackwash Background -->
 		<control type="group">
 			<animation effect="slide" end="-75,0" time="0" condition="Control.HasFocus(1)">Conditional</animation>
