@@ -1,3 +1,6 @@
+[B]Version 2.1.3[/B]
+- Remove DontBlendBackground skin setting
+
 [B]Version 2.1.2[/B]
 - Completely new and redesigned media flags
 
